@@ -1,6 +1,16 @@
 ﻿Version [Version Number] ([Friendly Version Number]) [Release Date]
 
 
+Version vNext
+
+	New features:
+
+	Bug fixes:
+		-[Core] In some special cases Simple Injector was not able to resolve generic types, where one of the
+		 generic type arguments was deducible from the others using the generic type constraints
+		 (work item 20994).
+
+
 Version 2.7.0 (v2.7.0 RTM) 2015-01-15
 
 	New features:
@@ -16,7 +26,7 @@ Version 2.7.0 (v2.7.0 RTM) 2015-01-15
 		 default IAssemblyResolver can't be used. (work item 20990).
 
 	Bug fixes:
-		-[Core]: In case a constructor of a type contained a primitive dependency, while the type was resolved
+		-[Core] In case a constructor of a type contained a primitive dependency, while the type was resolved
 		 as part of a collection or directly by building the Registration, the thrown exception message was
 		 misleading. (work item 20986).
 
